--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,25 +1,110 @@
-.crossword {
-	@apply flex flex-col items-center justify-center bg-red-600;
-}
-.grid {
-	@apply flex flex-col items-center justify-center bg-red-600;
+.clue {
+	@apply !text-primary text-[14px] !rounded-xl py-[1px];
 }
 
-:root .countdown {
-	line-height: 1em;
+.clues {
+	@apply !w-fit;
 }
 
-.countdown {
-	display: inline-flex;
-	& > * {
-		height: 1em;
-		@apply inline-block overflow-y-hidden;
-		&:before {
-			position: relative;
-			content: '00\A 01\A 02\A 03\A 04\A 05\A 06\A 07\A 08\A 09\A 10\A 11\A 12\A 13\A 14\A 15\A 16\A 17\A 18\A 19\A 20\A 21\A 22\A 23\A 24\A 25\A 26\A 27\A 28\A 29\A 30\A 31\A 32\A 33\A 34\A 35\A 36\A 37\A 38\A 39\A 40\A 41\A 42\A 43\A 44\A 45\A 46\A 47\A 48\A 49\A 50\A 51\A 52\A 53\A 54\A 55\A 56\A 57\A 58\A 59\A 60\A 61\A 62\A 63\A 64\A 65\A 66\A 67\A 68\A 69\A 70\A 71\A 72\A 73\A 74\A 75\A 76\A 77\A 78\A 79\A 80\A 81\A 82\A 83\A 84\A 85\A 86\A 87\A 88\A 89\A 90\A 91\A 92\A 93\A 94\A 95\A 96\A 97\A 98\A 99\A';
-			white-space: pre;
-			transition: all 0.2s cubic-bezier(1, 0, 0, 1);
-			top: calc(var(--value) * -1em);
-		}
+rect {
+	@apply !text-white !bg-base-200;
+	color: white !important;
+	text-color: white !important;
+}
+
+text {
+	fill: white !important;
+
+	.guess-text-correct {
+		fill: green !important;
+	}
+}
+.header {
+	@apply text-2xl text-white text-center;
+}
+
+. {
+	animation: fade-in-left;
+	animation-duration: 0.4s;
+}
+
+.r-modal {
+	/*--height: clamp(15%, fit, 70%);*/
+	--height: clamp(0, 500px, 50%);
+	--responsive-top: calc(var(--height) - 1000);
+	@apply bg-base-100 p-8 fixed z-30 justify-center h-fit top-[15%] translate-x-[-50%]  max-h-[70%]  w-fit min-w-[30%] max-w-[95%];
+	left: 50%;
+	width: clamp(50%, 80vw, calc(98% - 20px));
+	border-radius: 14px;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+
+	&-left {
+		animation: fade-in-left;
+		animation-duration: 0.4s;
+	}
+	&-right {
+		animation: fade-in-right;
+		animation-duration: 0.4s;
+	}
+	&-top {
+		animation: fade-in-top;
+		animation-duration: 0.4s;
+	}
+	&-bottom {
+		animation: fade-in-bottom;
+		animation-duration: 0.4s;
+	}
+}
+
+.backdrop {
+	@apply fixed top-0 left-0 w-full h-full z-20 bg-black opacity-50;
+}
+
+@keyframes fade-in-top {
+	0% {
+		opacity: 0;
+		left: 50%;
+		transform: translate(-50%, -7rem);
+	}
+	100% {
+		left: 50%;
+		opacity: 1;
+		transform: translate(-50%, 0);
+	}
+}
+@keyframes fade-in-bottom {
+	0% {
+		opacity: 0;
+		left: 50%;
+		transform: translate(-50%, 70vh);
+	}
+	100% {
+		left: 50%;
+		opacity: 1;
+		transform: translate(-50%, 0);
+	}
+}
+@keyframes fade-in-left {
+	0% {
+		left: 50%;
+		transform: translate(-100%, 0);
+		opacity: 0;
+	}
+	100% {
+		left: 50%;
+		transform: translate(-50%, 0);
+		opacity: 1;
+	}
+}
+@keyframes fade-in-right {
+	0% {
+		left: 50%;
+		transform: translate(0, 0);
+		opacity: 0;
+	}
+	100% {
+		left: 50%;
+		transform: translate(-50%, 0);
+		opacity: 1;
 	}
 }
